# target_scraper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  gmail.py  mail.py  pyproject.toml  scrape_stroller.py  target.py
