[tool.poetry]
name = "target_scrape"
version = "0.1.0"
description = ""
authors = ["Michael Heiser <mheiser1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.24.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
