[tool.poetry]
name = "target_scrape"
version = "0.1.0"
description = ""
authors = ["Michael Heiser <mheiser1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.24.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.6.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
